# azure-sandbox

./: .env-sample  README.md  dbt_project.yml  main.py  profiles.yml  pyproject.toml
models/example/: my_first_dbt_model.sql
models/staging/edfi/: src_edfi.yml  stg_edfi_grading_periods.sql
