[tool.poetry]
name = "azure-sandbox"
version = "0.1.0"
description = ""
authors = ["Marcos Alcozer <marcos@alcozer.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
black = "^22.3.0"
azure-storage-file-datalake = "^12.6.0"
dbt-synapse = "==1.0.2b1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
